# MotionDetection

./: .gitignore  README.md  README.txt  libopencv_calib3d.2.4.6.dylib  libopencv_contrib.2.4.6.dylib  libopencv_core.2.4.6.dylib  libopencv_features2d.2.4.6.dylib  libopencv_flann.2.4.6.dylib  libopencv_gpu.2.4.6.dylib  libopencv_highgui.2.4.6.dylib  libopencv_imgproc.2.4.6.dylib  libopencv_legacy.2.4.6.dylib  libopencv_ml.2.4.6.dylib  libopencv_nonfree.2.4.6.dylib  libopencv_objdetect.2.4.6.dylib  libopencv_ocl.2.4.6.dylib  libopencv_photo.2.4.6.dylib  libopencv_stitching.2.4.6.dylib  libopencv_superres.2.4.6.dylib  libopencv_ts.2.4.6.dylib  libopencv_video.2.4.6.dylib  libopencv_videostab.2.4.6.dylib
BGS/: DualGaussianModel.cpp  DualGaussianModel.h  GaussianModel.cpp  GaussianModel.h  GuassianModel.cpp  GuassianModel.h  gmmmain.cpp  main  main.cpp  makefile  run.sh
BGS.xcodeproj/: project.pbxproj
BGS.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
BGS/final/: Blur.cpp  Blur.hpp  DualSGM.cpp  DualSGM.hpp  main.cpp  run.sh
BGS/omp/: DualGaussianModel.cpp  DualGaussianModel.h  GaussianModel.cpp  GaussianModel.h  makefile  omp_main  omp_main.cpp
BGS/serial/: Blur.cpp  Blur.hpp  DualSGM.cpp  DualSGM.hpp  makefile  run.sh  serial_main.cpp
BGS/tbb/: DualGaussianModel.cpp  DualGaussianModel.h  DualSGM.cpp  DualSGM.hpp  GaussianModel.cpp  GaussianModel.h  makefile  run.sh  tbb_main.cpp
CUDA_IMPL/: CMakeLists.txt  README
CUDA_IMPL/BGS/: CMakeLists.txt  Makefile  cuda_kernels.cu  cuda_mem_functions.cpp  filter.cpp  filter.h  main.cpp
CUDA_IMPL/HW1/: CMakeLists.txt  HW1.cpp  Makefile  main.cpp  student_func.cu
cuda/: CMakeLists.txt  README
cuda/BGS/: compare.cpp  cuda_kernels.cu  cuda_mem_functions.cpp  filter.cpp  filter.h  main.cpp  timer.h  utils.h
serial_and_tbb/: Blur.cpp  DualSGM.hpp  README.md  main.cpp  makefile
